[gd_scene load_steps=29 format=2]

[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-cashin-history.png" type="Texture" id=1]
[ext_resource path="res://pck/scenes/transfer_1.gd" type="Script" id=2]
[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-cashin-addphoto.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-casin-cashin.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-cashin-copy.png" type="Texture" id=5]
[ext_resource path="res://pck/assets/Home-Member-Info/image-member-info-rightbg.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/Home-Withdraw/Home-Withdraw/EER1.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/menu/icon-main-back.png" type="Texture" id=8]
[ext_resource path="res://start/zawgyi-one.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://pck/assets/Home-Withdraw/icon-withdraw-question.png" type="Texture" id=10]
[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-cashin-confirm.png" type="Texture" id=11]
[ext_resource path="res://pck/assets/HomeScence/Home-Transfer-Topup/icon-transfer-cashin-question.png" type="Texture" id=12]
[ext_resource path="res://pck/assets/HomeScence/icon-home-money.png" type="Texture" id=13]
[ext_resource path="res://pck/assets/HomeScence/image-main-background.png" type="Texture" id=14]
[ext_resource path="res://pck/assets/HomeScence/icon-bottom-bar.png" type="Texture" id=15]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://pck/scenes/transfer_history.tscn" type="PackedScene" id=17]

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 2304, 1080 )
modulate_color = Color( 1, 1, 1, 0.741176 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )

[sub_resource type="DynamicFont" id=15]
size = 25
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=16]
size = 25
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )

[sub_resource type="Theme" id=20]
/styles/styleboxflat = SubResource( 19 )

[sub_resource type="DynamicFont" id=21]
size = 25
outline_color = Color( 0.184314, 0.180392, 0.345098, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )
border_color = Color( 0.0784314, 0.121569, 0.223529, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.4 )

[sub_resource type="Animation" id=23]
resource_name = "In"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "Out"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="transfer" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="transferPanel" type="Panel" parent="."]
margin_right = 2002.0
margin_bottom = 896.0
custom_styles/panel = SubResource( 9 )

[node name="rightbg" type="Sprite" parent="transferPanel"]
position = Vector2( 1126, 498 )
scale = Vector2( 1.382, 1.382 )
texture = ExtResource( 6 )

[node name="Icon-bottom-bar" type="Sprite" parent="transferPanel"]
position = Vector2( 1016, 5 )
scale = Vector2( 0.685556, 1 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="Sprite" parent="transferPanel"]
position = Vector2( 137.825, 515.361 )
scale = Vector2( 0.272, 0.304638 )
texture = ExtResource( 7 )

[node name="bank_info" type="TextureButton" parent="transferPanel"]
margin_left = 16.0
margin_top = 144.0
margin_right = 286.0
margin_bottom = 263.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/bank_info"]
position = Vector2( 132.688, 55.625 )
scale = Vector2( 0.34, 0.3 )
texture = ExtResource( 4 )

[node name="bank_info2" type="TextureButton" parent="transferPanel"]
margin_left = 1696.0
margin_top = 456.0
margin_right = 1744.0
margin_bottom = 504.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/bank_info2"]
position = Vector2( 24, 24 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )

[node name="bank_info3" type="TextureButton" parent="transferPanel"]
margin_left = 1558.0
margin_top = 709.0
margin_right = 1765.0
margin_bottom = 800.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/bank_info3"]
position = Vector2( 111, 52 )
scale = Vector2( 0.25, 0.3 )
texture = ExtResource( 11 )

[node name="Panel" type="Panel" parent="transferPanel"]
margin_left = 928.0
margin_top = 688.0
margin_right = 1084.0
margin_bottom = 816.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="bank_info3" type="TextureButton" parent="transferPanel/Panel"]
margin_left = 30.0
margin_top = 15.0
margin_right = 129.0
margin_bottom = 119.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/Panel/bank_info3"]
position = Vector2( 54.1457, 51.7734 )
scale = Vector2( 0.761858, 0.856049 )
texture = ExtResource( 3 )

[node name="transfer" type="TextureButton" parent="transferPanel"]
margin_left = 20.0
margin_top = 754.0
margin_right = 235.0
margin_bottom = 815.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/transfer"]
position = Vector2( 105.785, 34 )
scale = Vector2( 0.312062, 0.350187 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="transferPanel"]
margin_left = 384.0
margin_top = 216.0
margin_right = 715.0
margin_bottom = 307.0
custom_fonts/font = SubResource( 15 )
text = "လက္ခံမည့္သူ၏ဘဏ္အမ်ိဳးအစား
"
align = 1
valign = 1

[node name="Label4" type="Label" parent="transferPanel"]
margin_left = 296.0
margin_top = 552.0
margin_right = 616.0
margin_bottom = 643.0
custom_fonts/font = SubResource( 15 )
text = "သြင္းေငြပမာဏ"
align = 1
valign = 1

[node name="Label5" type="Label" parent="transferPanel"]
margin_left = 384.0
margin_top = 704.0
margin_right = 706.0
margin_bottom = 842.0
custom_fonts/font = SubResource( 15 )
text = "ေငြလႊဲသည့္ေျပစာဓာတ္ပုံထည့္ပါ:

"
align = 1
valign = 1

[node name="Label3" type="Label" parent="transferPanel"]
margin_left = 360.0
margin_top = 464.0
margin_right = 718.0
margin_bottom = 555.0
custom_fonts/font = SubResource( 15 )
text = "လက္ခံမည့္သူ၏ဘဏ္အေကာင့္
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="transferPanel"]
margin_left = 384.0
margin_top = 328.0
margin_right = 784.0
margin_bottom = 466.0
custom_fonts/font = SubResource( 15 )
text = "လက္ခံမည့္လက္ခံမည့္အေကာင့္အမည္: 

"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="transferPanel"]
anchor_top = -0.022
margin_left = 1.0
margin_top = 1.712
margin_right = 108.0
margin_bottom = 113.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/Exit"]
position = Vector2( 73.75, 67.45 )
scale = Vector2( 0.15, 0.199794 )
texture = ExtResource( 8 )

[node name="Balance_Boarder" type="Sprite" parent="transferPanel"]
position = Vector2( 492, 46 )
scale = Vector2( 0.589109, 0.589109 )
texture = ExtResource( 13 )

[node name="Balance" type="Label" parent="transferPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 397.0
margin_top = 33.0
margin_right = -1456.0
margin_bottom = -826.0
custom_fonts/font = SubResource( 16 )
text = "0"
align = 1
valign = 1

[node name="question" type="TextureRect" parent="transferPanel"]
margin_left = 1900.0
margin_top = 5.0
margin_right = 1980.0
margin_bottom = 85.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="transferPanel/question"]
visible = false
position = Vector2( 50.5313, 47.3125 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="game_account4" type="LineEdit" parent="transferPanel"]
margin_left = 948.0
margin_top = 324.0
margin_right = 1792.0
margin_bottom = 396.0
theme = SubResource( 20 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
caret_blink = true
caret_blink_speed = 0.5

[node name="game_account5" type="LineEdit" parent="transferPanel"]
margin_left = 952.0
margin_top = 200.0
margin_right = 1796.0
margin_bottom = 272.0
theme = SubResource( 20 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
caret_blink = true
caret_blink_speed = 0.5

[node name="game_account2" type="LineEdit" parent="transferPanel"]
margin_left = 948.0
margin_top = 452.0
margin_right = 1792.0
margin_bottom = 524.0
rect_rotation = -0.399242
theme = SubResource( 20 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
caret_blink = true
caret_blink_speed = 0.5

[node name="game_account" type="LineEdit" parent="transferPanel"]
margin_left = 948.0
margin_top = 556.0
margin_right = 1792.0
margin_bottom = 628.0
theme = SubResource( 20 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
caret_blink = true
caret_blink_speed = 0.5

[node name="transfer_history" parent="." instance=ExtResource( 17 )]
visible = false

[node name="transferAnimation" type="AnimationPlayer" parent="."]
anims/In = SubResource( 23 )
anims/Out = SubResource( 24 )
anims/RESET = SubResource( 25 )

[connection signal="pressed" from="transferPanel/transfer" to="." method="_on_transfer_pressed"]
[connection signal="pressed" from="transferPanel/Exit" to="." method="_on_Exit_pressed"]
